--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-*,
-*::before,
-*::after {
+/* Reset and Global Styles */
+*, *::before, *::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-body {
+  }
+  
+  body {
     --color: rgba(30, 30, 30);
     --bgColor: rgba(245, 245, 245);
     min-height: 100vh;
@@ -16,11 +16,88 @@ body {
     font-family: "Poppins", sans-serif;
     color: var(--color);
     background: var(--bgColor);
-}
-h1 {
+  }
+  
+  /* Heading */
+  h1 {
     text-align: center;
+  }
+  
+  /* Search Box */
+  .search-box {
+    width: fit-content;
+    height: fit-content;
+    position: relative;
+    margin-bottom: 2rem;
+  }
+  
+  .input-search {
+    
+    height: 50px;
+    width: 50px;
+    border-style: none;
+    padding: 10px;
+    font-size: 18px;
+    letter-spacing: 2px;
+    outline: none;
+    border-radius: 25px;
+    transition: all 0.5s ease-in-out;
+    background-color: #22a6b3;
+    padding-right: 40px;
+    margin: 0 0 0 10px;
+    color: black;
+    border: 1px solid black;
+  }
+  
+  .input-search::placeholder {
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 18px;
+    letter-spacing: 2px;
+    font-weight: 100;
+  }
+  
+  .btn-search {
+    width: 50px;
+    height: 50px;
+    border-style: none;
+    font-size: 20px;
+    font-weight: bold;
+    outline: none;
+    cursor: pointer;
+    border-radius: 50%;
+    position: absolute;
+    right: 0;
+    color: black;
+    background-color: transparent;
+    pointer-events: painted;
+  }
+  
+  .btn-search:focus ~ .input-search,
+  .input-search:focus {
+    width: 300px;
+    border-radius: 0;
+    background-color: transparent;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+    transition: all 500ms cubic-bezier(0, 0.11, 0.35, 2);
+  }
+
+  .btn-download {
+    width: 50px;
+    height: 50px;
+    border-style: none;
+    font-size: 20px;
+    font-weight: bold;
+    outline: none;
+    cursor: pointer;
+    border-radius: 50%;
+    margin-left: 10px;
+    color: black;
+    background-color: #22a6b3;
 }
-ul {
+
+  
+  /* Timeline */
+  ul {
     --col-gap: 2rem;
     --row-gap: 2rem;
     --line-w: 0.25rem;
@@ -31,26 +108,30 @@ ul {
     list-style: none;
     width: min(60rem, 90%);
     margin-inline: auto;
-}
-ul::before {
+  }
+  
+  ul::before {
     content: "";
     grid-column: 1;
     grid-row: 1 / span 20;
     background: rgb(225, 225, 225);
     border-radius: calc(var(--line-w) / 2);
-}
-ul li:not(:last-child) {
+  }
+  
+  ul li:not(:last-child) {
     margin-bottom: var(--row-gap);
-}
-ul li {
+  }
+  
+  ul li {
     grid-column: 2;
     --inlineP: 1.5rem;
     margin-inline: var(--inlineP);
     grid-row: span 2;
     display: grid;
     grid-template-rows: min-content min-content min-content;
-}
-ul li .date {
+  }
+  
+  ul li .date {
     --dateH: 3rem;
     height: var(--dateH);
     margin-inline: calc(var(--inlineP) * -1);
@@ -63,8 +144,9 @@ ul li .date {
     place-content: center;
     position: relative;
     border-radius: calc(var(--dateH) / 2) 0 0 calc(var(--dateH) / 2);
-}
-ul li .date::before {
+  }
+  
+  ul li .date::before {
     content: "";
     width: var(--inlineP);
     aspect-ratio: 1;
@@ -74,8 +156,9 @@ ul li .date::before {
     top: 100%;
     clip-path: polygon(0 0, 100% 0, 0 100%);
     right: 0;
-}
-ul li .date::after {
+  }
+  
+  ul li .date::after {
     content: "";
     position: absolute;
     width: 2rem;
@@ -86,25 +169,29 @@ ul li .date::after {
     top: 50%;
     transform: translate(50%, -50%);
     right: calc(100% + var(--col-gap) + var(--line-w) / 2);
-}
-ul li .title,
-ul li .descr {
+  }
+  
+  ul li .title,
+  ul li .descr {
     background: var(--bgColor);
     position: relative;
     padding-inline: 1.5rem;
-}
-ul li .title {
+  }
+  
+  ul li .title {
     overflow: hidden;
     padding-block-start: 1.5rem;
     padding-block-end: 1rem;
     font-weight: 500;
-}
-ul li .descr {
+  }
+  
+  ul li .descr {
     padding-block-end: 1.5rem;
     font-weight: 300;
-}
-ul li .title::before,
-ul li .descr::before {
+  }
+  
+  ul li .title::before,
+  ul li .descr::before {
     content: "";
     position: absolute;
     width: 90%;
@@ -114,46 +201,63 @@ ul li .descr::before {
     border-radius: 50%;
     filter: blur(4px);
     transform: translate(-50%, 50%);
-}
-ul li .title::before {
+  }
+  
+  ul li .title::before {
     bottom: calc(100% + 0.125rem);
-}
-ul li .descr::before {
+  }
+  
+  ul li .descr::before {
     z-index: -1;
     bottom: 0.25rem;
-}
-@media (min-width: 40rem) {
+  }
+  
+  @media (min-width: 40rem) {
     ul {
-        grid-template-columns: 1fr var(--line-w) 1fr;
+      grid-template-columns: 1fr var(--line-w) 1fr;
     }
+  
     ul::before {
-        grid-column: 2;
+      grid-column: 2;
     }
+  
     ul li:nth-child(odd) {
-        grid-column: 1;
+      grid-column: 1;
     }
+  
     ul li:nth-child(even) {
-        grid-column: 3;
+      grid-column: 3;
     }
+  
     ul li:nth-child(2) {
-        grid-row: 2/4;
+      grid-row: 2/4;
     }
+  
     ul li:nth-child(odd) .date::before {
-        clip-path: polygon(0 0, 100% 0, 100% 100%);
-        left: 0;
+      clip-path: polygon(0 0, 100% 0, 100% 100%);
+      left: 0;
     }
+  
     ul li:nth-child(odd) .date::after {
-        transform: translate(-50%, -50%);
-        left: calc(100% + var(--col-gap) + var(--line-w) / 2);
+      transform: translate(-50%, -50%);
+      left: calc(100% + var(--col-gap) + var(--line-w) / 2);
     }
+  
     ul li:nth-child(odd) .date {
-        border-radius: 0 calc(var(--dateH) / 2) calc(var(--dateH) / 2) 0;
+      border-radius: 0 calc(var(--dateH) / 2) calc(var(--dateH) / 2) 0;
     }
-}
-.credits {
+  }
+  
+  /* Footer */
+  .credits {
     margin-top: 1rem;
     text-align: right;
-}
-.credits a {
+  }
+  
+  .credits a {
     color: var(--color);
+  }
+
+  .timeline-container {
+    margin-top: -10rem; 
 }
