--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
     height: 50px;
     width: 50px;
     border-style: none;
-    padding: 10px;
+    padding: 5px;
     font-size: 18px;
     letter-spacing: 2px;
     outline: none;
@@ -44,9 +44,10 @@
     transition: all 0.5s ease-in-out;
     background-color: #22a6b3;
     padding-right: 40px;
-    margin: 0 0 0 10px;
+    margin: 0 0 0 1px;
     color: black;
     border: 1px solid black;
+    margin-left:-1rem ;
   }
   
   .input-search::placeholder {
@@ -90,10 +91,11 @@
     outline: none;
     cursor: pointer;
     border-radius: 50%;
-    margin-left: 10px;
+    margin-left: -1rem;
     color: black;
     background-color: #22a6b3;
-}
+  }
+
 
   
   /* Timeline */
@@ -261,3 +263,9 @@
   .timeline-container {
     margin-top: -8rem; 
 }
+
+h4 {
+  margin-top: -1rem; 
+}
+
+
